--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
 # Jekyll configuration
 
-name: My blog
+name: Tech blog
 description: A jekyll theme
 
 # url is currently only used only for the RSS feed in feed.xml
-url: https://scotte.github.io/jekyll-clean
+url: https://aepetelin.github.io/tech
 
 # baseurl will often be '', but for a project page on gh-pages, it needs to
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: /jekyll-clean
+baseurl: /tech
 
 # This can be '' to hide the Github nav button
-github: 'scotte/jekyll-clean'
+github: 'aepetelin/tech'
 
 # Set this to your UA-# value, or '' to disable the block completely
 gaaccount: ''
